Unittests added